Deploy AWS backend and prepare frontend for Vercel
- Deploy AWS Lambda backend with Serverless Framework
- Fix Lambda handler packaging by copying files to root
- Add prepare-lambda.js script for deployment automation
- Update serverless.yml configuration for production
- Add frontend Vercel configuration (vercel.json)
- Add TypeScript definitions for Vite environment variables
- Update .gitignore for Lambda deployment files
- Add Vercel deployment documentation
- Update backend and frontend package.json scripts
- Generate and configure FRONTEND_KEY for API security

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,9 @@ frontend/build/
 # Backend build
 backend/dist/
 backend/build/
+
+# Lambda deployment files (copied to root for packaging)
+index.js
+handlers/
+services/
+utils/
