Fix deployment workflow and add comprehensive troubleshooting guide
- Fix deploy job condition to only run if build succeeds
- Add DEPLOYMENT_TROUBLESHOOTING.md with common errors and solutions
- Document GitHub Actions, AWS Lambda, and Vercel deployment issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,7 +80,7 @@ jobs:
   deploy:
     name: Deploy to AWS
     needs: build
-    if: always() && github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && needs.build.result == 'success'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
