--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,52 +144,68 @@ jobs:
           echo "$SERVERLESS_INFO"
           echo "=============================="
           
-          # Try to parse S3 bucket from serverless info (robust parsing + strip CR)
-          S3_BUCKET=$(printf "%s\n" "$SERVERLESS_INFO" | grep -i -E 'S3Bucket(Name)?[: ]+' | awk '{print $2}' | tr -d '\r' | head -n1 || true)
+          # Extract stack name from serverless info
+          STACK_NAME=$(printf "%s\n" "$SERVERLESS_INFO" | grep -i -E '^stack:' | awk '{print $2}' | tr -d '\r' | head -n1 || true)
           
-          # Fallback: get Stack Name from serverless info, then query CloudFormation outputs
-          if [ -z "$S3_BUCKET" ]; then
-            STACK_NAME=$(printf "%s\n" "$SERVERLESS_INFO" | awk -F': ' '/Stack/ {print $2; exit}' | tr -d '\r')
-            if [ -n "$STACK_NAME" ]; then
-              echo "Attempting to get S3 bucket from CloudFormation stack: $STACK_NAME"
-              S3_BUCKET=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" --region ${{ env.AWS_REGION }} --query "Stacks[0].Outputs[?contains(OutputKey,'S3') || contains(OutputKey,'Bucket')].OutputValue" --output text || true)
-              S3_BUCKET=$(printf "%s\n" "$S3_BUCKET" | head -n1 | tr -d '\r')
-            fi
+          if [ -z "$STACK_NAME" ]; then
+            # Fallback: construct stack name from service and stage
+            STACK_NAME="aisalesagent-prod"
+            echo "Using default stack name: $STACK_NAME"
+          else
+            echo "Extracted stack name: $STACK_NAME"
+          fi
+          
+          # Query CloudFormation stack outputs for S3 bucket name
+          echo "Querying CloudFormation stack outputs for S3 bucket name..."
+          S3_BUCKET=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" --region ${{ env.AWS_REGION }} --query "Stacks[0].Outputs[?OutputKey=='S3BucketName'].OutputValue" --output text 2>/dev/null || true)
+          S3_BUCKET=$(printf "%s\n" "$S3_BUCKET" | head -n1 | tr -d '\r' | xargs)
+          
+          # Fallback: try alternative output key patterns
+          if [ -z "$S3_BUCKET" ] || [ "$S3_BUCKET" = "None" ]; then
+            echo "Trying alternative CloudFormation output patterns..."
+            S3_BUCKET=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" --region ${{ env.AWS_REGION }} --query "Stacks[0].Outputs[?contains(OutputKey,'S3') || contains(OutputKey,'Bucket')].OutputValue" --output text 2>/dev/null || true)
+            S3_BUCKET=$(printf "%s\n" "$S3_BUCKET" | head -n1 | tr -d '\r' | xargs)
+          fi
+          
+          # Last resort: construct bucket name from known pattern (service-assets-stage)
+          if [ -z "$S3_BUCKET" ] || [ "$S3_BUCKET" = "None" ]; then
+            echo "Constructing bucket name from known pattern..."
+            S3_BUCKET="aisalesagent-assets-prod"
+            echo "Using constructed bucket name: $S3_BUCKET"
           fi
           
           # Final check: fail if bucket name is still empty
-          if [ -z "$S3_BUCKET" ]; then
-            echo "Error: could not determine S3 bucket name. Dumping serverless info above. Aborting." >&2
+          if [ -z "$S3_BUCKET" ] || [ "$S3_BUCKET" = "None" ]; then
+            echo "Error: could not determine S3 bucket name. Stack: $STACK_NAME" >&2
+            echo "Attempting to list CloudFormation outputs for debugging:" >&2
+            aws cloudformation describe-stacks --stack-name "$STACK_NAME" --region ${{ env.AWS_REGION }} --query "Stacks[0].Outputs" --output table || true
             exit 1
           fi
           
+          echo "Using S3 bucket: $S3_BUCKET"
           echo "Uploading frontend to s3://$S3_BUCKET/frontend"
           aws s3 sync frontend/dist s3://$S3_BUCKET/frontend --delete --region ${{ env.AWS_REGION }}
 
       - name: Invalidate CloudFront cache (if any)
         run: |
-          # Get S3 bucket name again (from previous step's logic)
+          # Get stack name and query CloudFormation for S3 bucket
           SERVERLESS_INFO=$(npx serverless info --stage prod --region ${{ env.AWS_REGION }} || true)
-          S3_BUCKET=$(printf "%s\n" "$SERVERLESS_INFO" | grep -i -E 'S3Bucket(Name)?[: ]+' | awk '{print $2}' | tr -d '\r' | head -n1 || true)
+          STACK_NAME=$(printf "%s\n" "$SERVERLESS_INFO" | grep -i -E '^stack:' | awk '{print $2}' | tr -d '\r' | head -n1 || echo "aisalesagent-prod")
           
-          if [ -z "$S3_BUCKET" ]; then
-            STACK_NAME=$(printf "%s\n" "$SERVERLESS_INFO" | awk -F': ' '/Stack/ {print $2; exit}' | tr -d '\r')
-            if [ -n "$STACK_NAME" ]; then
-              S3_BUCKET=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" --region ${{ env.AWS_REGION }} --query "Stacks[0].Outputs[?contains(OutputKey,'S3') || contains(OutputKey,'Bucket')].OutputValue" --output text || true)
-              S3_BUCKET=$(printf "%s\n" "$S3_BUCKET" | head -n1 | tr -d '\r')
-            fi
+          # Query CloudFormation for S3 bucket name
+          S3_BUCKET=$(aws cloudformation describe-stacks --stack-name "$STACK_NAME" --region ${{ env.AWS_REGION }} --query "Stacks[0].Outputs[?OutputKey=='S3BucketName'].OutputValue" --output text 2>/dev/null | head -n1 | tr -d '\r' | xargs || echo "aisalesagent-assets-prod")
+          
+          if [ -z "$S3_BUCKET" ] || [ "$S3_BUCKET" = "None" ]; then
+            S3_BUCKET="aisalesagent-assets-prod"
           fi
           
-          if [ -z "$S3_BUCKET" ]; then
-            echo "Warning: Could not determine S3 bucket name for CloudFront lookup"
-            exit 0
-          fi
+          echo "Looking for CloudFront distribution for bucket: $S3_BUCKET"
           
           # Try to find CloudFront distribution referencing the bucket
-          CLOUDFRONT_ID=$(aws cloudfront list-distributions --region ${{ env.AWS_REGION }} --query "DistributionList.Items[?Origins.Items[?DomainName=='$S3_BUCKET.s3.${{ env.AWS_REGION }}.amazonaws.com']].Id" --output text || true)
-          CLOUDFRONT_ID=$(printf "%s\n" "$CLOUDFRONT_ID" | head -n1 | tr -d '\r')
+          CLOUDFRONT_ID=$(aws cloudfront list-distributions --region ${{ env.AWS_REGION }} --query "DistributionList.Items[?Origins.Items[?DomainName=='$S3_BUCKET.s3.${{ env.AWS_REGION }}.amazonaws.com']].Id" --output text 2>/dev/null || true)
+          CLOUDFRONT_ID=$(printf "%s\n" "$CLOUDFRONT_ID" | head -n1 | tr -d '\r' | xargs)
           
-          if [ -n "$CLOUDFRONT_ID" ] && [ "$CLOUDFRONT_ID" != "None" ]; then
+          if [ -n "$CLOUDFRONT_ID" ] && [ "$CLOUDFRONT_ID" != "None" ] && [ "$CLOUDFRONT_ID" != "" ]; then
             echo "Creating CloudFront invalidation for distribution $CLOUDFRONT_ID"
             aws cloudfront create-invalidation --distribution-id "$CLOUDFRONT_ID" --paths "/*" --region ${{ env.AWS_REGION }}
           else
