Fix CORS configuration to allow x-frontend-key header in API Gateway

--- a/serverless.yml
+++ b/serverless.yml
@@ -83,7 +83,14 @@ functions:
       - http:
           path: /api/{proxy+}
           method: ANY
-          cors: true
+          cors:
+            origin: ${env:CORS_ORIGIN, '*'}
+            headers:
+              - Content-Type
+              - x-frontend-key
+              - X-Frontend-Key
+              - Authorization
+            allowCredentials: true
 
 resources:
   Resources:
