Fix CORS to dynamically allow Vercel origins and improve error handling - Production ready

--- a/serverless.yml
+++ b/serverless.yml
@@ -84,7 +84,7 @@ functions:
           path: /api/{proxy+}
           method: ANY
           cors:
-            origin: ${env:CORS_ORIGIN, '*'}
+            origin: '*'
             headers:
               - Content-Type
               - x-frontend-key
