--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,13 @@
     "@aws-sdk/lib-dynamodb": "^3.933.0",
     "@aws-sdk/s3-request-presigner": "^3.933.0",
     "@aws-sdk/util-dynamodb": "^3.933.0",
+    "@aws-sdk/client-ses": "^3.933.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "serverless-http": "^3.2.0",
+    "twilio": "^5.3.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
